[package]
name = "yubikey_fido2_teste"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
ctap-hid-fido2 = "3.5.5"
dialoguer = "0.12"
dotenvy = "0.15"
hex = "0.4"
nostr = { version = "0.43", features = ["std", "nip04", "nip44", "nip46"] }
nostr-connect = "0.43"
nostr-relay-pool = "0.43"
rand = "0.9.2"
rpassword = "7.3"
tokio = { version = "1.48", features = ["full"] }
zeroize = "1.8"